k3s/jenkins/jenkins-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: mjallouli-project1
spec:
  type: ClusterIP
  selector:
    app: jenkins
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: agent
    port: 50000
    targetPort: 50000
