k3s/jenkins/jenkins-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  namespace: mjallouli-project1
spec:
  ingressClassName: traefik
  rules:
  - host: jenkins.20.162.255.135.nip.io   # <-- IP publique de ton ingress controller
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 8080
